--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@vercel/analytics": "^1.3.1",
     "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
